--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,14 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
+---
+layout: base
+excerpt_separator: "<!--more-->"
+---
+<div class="my-2 container">
+  <a class="btn btn-link" href="{% link blog.html %}"><i class="bi bi-arrow-left-square"></i> Back</a>
+  <h1 class="bg-dark rounded-3 p-3 mb-3 text-light">{{ page.title }}</h1>
+</div>
+{% if page.thumb %}
+  <img src="{{ page.thumb }}" alt="{{ page.thumb-alt }}" width="100%" class="splash-image">
+{% endif %}
+<main class="container main-content" id="main-content">
     {{ content }}
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-          tex2jax: {
-            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-            inlineMath: [['$','$']]
-          }
-        });
-    </script>
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
-  </body>
-</html>
+</main>
