--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ page.title }}</title>
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ '/assets/blog.css' | relative_url }}">
@@ -23,10 +24,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% link index.html %}">Home</a>
+                  <a class="nav-link active" aria-current="page" href="{% link index.html %}">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% link blog.html %}">Blog</a>
+                  <a class="nav-link" href="{% link blog.html %}">Blog</a>
                 </li>
             </ul>
             </div>
