--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  @apply border-black;
+  @apply dark:bg-gray-900 dark:text-white;
+  @apply dark:border-white;
 }
 
 html,
